# pytest-scope-demo

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  update-poetry-deps-to-latest.sh
tests/: conftest.py
tests/experiment_one/: conftest.py  test_one.py  test_two.py
tests/experiment_two/: conftest.py
