[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100

[tool.poetry]
name = "pytest-scope-demo"
version = "0.1.0"
description = ""
authors = ["shaweric01@gmail.com"]
readme = "README.md"
packages = [{include = "pytest-scope-demo"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
black = "^23.10.0"
pytest = "^7.4.2"
flake8 = "^6.1.0"
flake8-formatter-junit-xml = "^0.0.6"
isort = "^5.12.0"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
